--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -10,201 +10,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a01d30",
+   "id": "570c3254",
    "metadata": {},
    "source": [
-    "## 1. Marcar el punto de giro con el ratón"
+    "### Aplicación de transformaciones geométricas básicas: Marcar el punto de giro y trasladar la imagen arrastrando con el ratón"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0a076477",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Usa sliders o clic en la imagen para cambiar el punto de giro.\n",
-      "Pulsa ESC para salir.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import cv2 as cv\n",
-    "import numpy as np\n",
-    "\n",
-    "image = cv.imread('images/cats.png')\n",
-    "if image is None:\n",
-    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
-    "h, w = image.shape[:2]\n",
-    "\n",
-    "cv.namedWindow(\"Transformaciones\")\n",
-    "\n",
-    "cx, cy = w//2, h//2\n",
-    "mouse_selected = False\n",
-    "\n",
-    "def nothing(x):\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)\n",
-    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)\n",
-    "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
-    "cv.createTrackbar(\"Cx\", \"Transformaciones\", w//2, w, nothing)\n",
-    "cv.createTrackbar(\"Cy\", \"Transformaciones\", h//2, h, nothing)\n",
-    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)\n",
-    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
-    "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
-    "\n",
-    "def mouse(event, x, y, flags, param):\n",
-    "    global cx, cy, mouse_selected\n",
-    "    if event == cv.EVENT_LBUTTONDOWN:\n",
-    "        cx, cy = x, y\n",
-    "        mouse_selected = True\n",
-    "\n",
-    "cv.setMouseCallback(\"Transformaciones\", mouse)\n",
-    "\n",
-    "print(\"Usa sliders o clic en la imagen para cambiar el punto de giro.\")\n",
-    "print(\"Pulsa ESC para salir.\")\n",
-    "\n",
-    "while True:\n",
-    "    tx = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - w//2\n",
-    "    ty = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - h//2\n",
-    "    angle = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
-    "    sx = cv.getTrackbarPos(\"EscalaX\", \"Transformaciones\") / 100.0\n",
-    "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
-    "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
-    "\n",
-    "    if not mouse_selected:\n",
-    "        cx = cv.getTrackbarPos(\"Cx\", \"Transformaciones\")\n",
-    "        cy = cv.getTrackbarPos(\"Cy\", \"Transformaciones\")\n",
-    "    else:\n",
-    "        cv.setTrackbarPos(\"Cx\", \"Transformaciones\", cx)\n",
-    "        cv.setTrackbarPos(\"Cy\", \"Transformaciones\", cy)\n",
-    "        mouse_selected = False\n",
-    "\n",
-    "    # Traslación\n",
-    "    T = np.float32([[1, 0, tx],\n",
-    "                    [0, 1, ty]])\n",
-    "    img_T = cv.warpAffine(image, T, (w, h))\n",
-    "\n",
-    "    # Rotación\n",
-    "    M_translate1 = np.float32([[1, 0, -cx],\n",
-    "                               [0, 1, -cy]])\n",
-    "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
-    "    M_translate2 = np.float32([[1, 0, cx],\n",
-    "                               [0, 1, cy]])\n",
-    "\n",
-    "    M1 = np.vstack([M_translate1, [0, 0, 1]])\n",
-    "    M2 = np.vstack([M_rotate, [0, 0, 1]])\n",
-    "    M3 = np.vstack([M_translate2, [0, 0, 1]])\n",
-    "    M_rot = M3 @ M2 @ M1\n",
-    "    img_R = cv.warpAffine(img_T, M_rot[:2], (w, h))\n",
-    "\n",
-    "    # Escalado\n",
-    "    if uniforme:\n",
-    "        s = sx\n",
-    "        S = np.float32([[s, 0, 0],\n",
-    "                        [0, s, 0]])\n",
-    "    else:\n",
-    "        S = np.float32([[sx, 0, 0],\n",
-    "                        [0, sy, 0]])\n",
-    "\n",
-    "    img_final = cv.warpAffine(img_R, S, (w, h))\n",
-    "\n",
-    "    img_display = img_final.copy()\n",
-    "    \n",
-    "    cv.circle(img_display, (cx, cy), 5, (0, 0, 255), -1)\n",
-    "    cv.putText(img_display, f\"({cx},{cy})\", (cx + 10, cy - 10),\n",
-    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
-    "\n",
-    "    tx_point, ty_point = w//2 + tx, h//2 + ty\n",
-    "    cv.circle(img_display, (tx_point, ty_point), 5, (0, 255, 0), -1)\n",
-    "    cv.putText(img_display, f\"({tx_point},{ty_point})\", (tx_point + 10, ty_point - 10),\n",
-    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
-    "\n",
-    "    cv.imshow(\"Transformaciones\", img_display)\n",
-    "\n",
-    "    if cv.waitKey(1) & 0xFF == 27:\n",
-    "        break\n",
-    "\n",
-    "cv.destroyAllWindows()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9902b41a",
-   "metadata": {},
-   "source": [
-    "## 2. Trasladar la imagen arrastrando con el ratón"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5ab29067",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imagen guardada como 'output/imagen_trasladada.png'\n"
-     ]
-    }
-   ],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
-    "clone = cv2.imread(\"images/cats.png\")\n",
-    "if clone is None:\n",
-    "    raise FileNotFoundError(\"No se pudo cargar la imagen.\")\n",
-    "\n",
-    "dragging = False\n",
-    "start_x, start_y = 0, 0\n",
-    "tx, ty = 0, 0\n",
-    "\n",
-    "def mouse_drag(event, x, y, flags, param):\n",
-    "    global dragging, start_x, start_y, tx, ty\n",
-    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
-    "        dragging = True\n",
-    "        start_x, start_y = x, y\n",
-    "    elif event == cv2.EVENT_MOUSEMOVE and dragging:\n",
-    "        tx, ty = x - start_x, y - start_y\n",
-    "    elif event == cv2.EVENT_LBUTTONUP:\n",
-    "        dragging = False\n",
-    "\n",
-    "cv2.namedWindow(\"Traslacion con raton\")\n",
-    "cv2.setMouseCallback(\"Traslacion con raton\", mouse_drag)\n",
-    "\n",
-    "while True:\n",
-    "    M = np.float32([[1, 0, tx], [0, 1, ty]])\n",
-    "    moved = cv2.warpAffine(clone, M, (clone.shape[1], clone.shape[0]))\n",
-    "    cv2.imshow(\"Traslacion con raton\", moved)\n",
-    "\n",
-    "    key = cv2.waitKey(20) & 0xFF\n",
-    "    if key == 27:\n",
-    "        cv2.imwrite(\"output/imagen_trasladada.png\", moved)\n",
-    "        print(\"Imagen guardada como 'output/imagen_trasladada.png'\")\n",
-    "        break\n",
-    "\n",
-    "cv2.destroyAllWindows()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "570c3254",
-   "metadata": {},
-   "source": [
-    "### Código unido: Marcar el punto de giro y trasladar la imagen arrastrando con el ratón"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "52e30f96",
    "metadata": {},
    "outputs": [
@@ -307,12 +121,15 @@
     "    # Escalado\n",
     "    if uniforme:\n",
     "        s = sx\n",
-    "        S = np.float32([[s,0,0],[0,s,0]])\n",
+    "        S = np.float32([[s,0,0],\n",
+    "                        [0,s,0]])\n",
     "    else:\n",
-    "        S = np.float32([[sx,0,0],[0,sy,0]])\n",
+    "        S = np.float32([[sx,0,0],\n",
+    "                        [0,sy,0]])\n",
     "    img_final = cv.warpAffine(img_R, S, (w,h))\n",
     "\n",
     "    img_display = img_final.copy()\n",
+    "    \n",
     "    cv.circle(img_display, (cx, cy), 5, (0,0,255), -1)\n",
     "    cv.putText(img_display, f\"({cx},{cy})\", (cx+10, cy-10), cv.FONT_HERSHEY_SIMPLEX, 0.6, (0,0,255),2)\n",
     "\n",
@@ -334,13 +151,12 @@
    "id": "3ddfd1ac",
    "metadata": {},
    "source": [
-    "## 3. Hacer la parte obligatoria sobre vídeo\n",
+    "## Parte obligatoria sobre vídeo\n",
     "###  1a. \n",
-    "- Desarrollar una aplicación que lleve a cabo transformaciones de la imagen en tiempo real a través de una interfaz basada en trackbars o equivalente\n",
+    "- Desarrollar una aplicación que lleve a cabo transformaciones del vídeo en tiempo real a través de una interfaz basada en trackbars o equivalente\n",
     "- Hacer traslaciones. Es necesario indicar la magnitud de la traslación en X y en Y.\n",
     "- Hacer rotaciones. Es necesario indicar el centro de giro y ángulo de giro.\n",
-    "- Hacer escalados uniformes y no uniformes. Es necesario indicar los factores de\n",
-    "escala.\n"
+    "- Hacer escalados uniformes y no uniformes. Es necesario indicar los factores de escala.\n"
    ]
   },
   {
@@ -458,12 +274,12 @@
    "metadata": {},
    "source": [
     "### 1b. \n",
-    "- Dada una imagen trazar una ventana de proyección y proyectar la imagen."
+    "- Dado un vídeo trazar una ventana de proyección y proyectar el vídeo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "7c2d6bd1",
    "metadata": {},
    "outputs": [
@@ -491,8 +307,8 @@
     "\n",
     "def ordenar_cuatro_puntos(pts):\n",
     "    pts = np.array(pts, dtype=np.float32)\n",
-    "    s = pts.sum(axis=1)\n",
-    "    diff = np.diff(pts, axis=1)\n",
+    "    s = pts.sum(axis=1) # x + y\n",
+    "    diff = np.diff(pts, axis=1) # y - x\n",
     "\n",
     "    tl = pts[np.argmin(s)]\n",
     "    br = pts[np.argmax(s)]\n",
@@ -546,11 +362,9 @@
     "        if homography_ready and H is not None:\n",
     "            h, w = frame.shape[:2]\n",
     "            warped = cv2.warpPerspective(frame, H, (w, h))\n",
-    "\n",
-    "            mask = np.zeros((h, w), dtype=np.uint8)\n",
-    "            cv2.fillPoly(mask, [dst_polygon], 255)\n",
-    "\n",
-    "            result = np.zeros_like(frame)\n",
+    "            mask = np.zeros((h, w), dtype=np.uint8) # fondo negro\n",
+    "            cv2.fillPoly(mask, [dst_polygon], 255) # hueco blanco para la proyección\n",
+    "            result = np.zeros_like(frame) # crear lienzo vacío\n",
     "            cv2.copyTo(warped, mask, result)\n",
     "\n",
     "            output = result\n",
@@ -585,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "77a72663",
    "metadata": {},
    "outputs": [],
@@ -598,11 +412,11 @@
     "def apply_distortion(image, k1, k2, p1, p2, k3, center=None):\n",
     "    h, w = image.shape[:2]\n",
     "    distCoeff = np.zeros((5,1), np.float64)\n",
-    "    distCoeff[0,0] = k1\n",
-    "    distCoeff[1,0] = k2\n",
-    "    distCoeff[2,0] = p1\n",
-    "    distCoeff[3,0] = p2\n",
-    "    distCoeff[4,0] = k3\n",
+    "    distCoeff[0,0] = k1 # radial k1\n",
+    "    distCoeff[1,0] = k2 # radial k2\n",
+    "    distCoeff[2,0] = p1 # tangencial p1\n",
+    "    distCoeff[3,0] = p2 # tangencial p2\n",
+    "    distCoeff[4,0] = k3 # radial k3\n",
     "\n",
     "    cam = np.eye(3, dtype=np.float32)\n",
     "    if center is None:\n",
@@ -612,8 +426,8 @@
     "        cam[0,2] = center[0]\n",
     "        cam[1,2] = center[1]\n",
     "\n",
-    "    cam[0,0] = 10.0\n",
-    "    cam[1,1] = 10.0\n",
+    "    cam[0,0] = 10.0 # Definir longitud focal x\n",
+    "    cam[1,1] = 10.0 # Definir longitud focal y\n",
     "\n",
     "    distorted_img = cv2.undistort(image, cam, distCoeff)\n",
     "    return distorted_img\n",
@@ -671,12 +485,12 @@
    "id": "f9798285",
    "metadata": {},
    "source": [
-    "## 4. Transformación afín con 3 puntos"
+    "## Transformación afín con 3 puntos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "2450e4e9",
    "metadata": {},
    "outputs": [
@@ -764,7 +578,7 @@
    "id": "1c4a9af7",
    "metadata": {},
    "source": [
-    "## 5. Calcular la imagen especular a partir de una imagen."
+    "## Calcular la imagen especular a partir de una imagen."
    ]
   },
   {
@@ -803,12 +617,12 @@
    "id": "a2d12ea0",
    "metadata": {},
    "source": [
-    "## 6. Trazar una recta que será el eje de reflexión y “reflejar” la imagen."
+    "## Trazar una recta que será el eje de reflexión y “reflejar” la imagen."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6b48f639",
    "metadata": {},
    "outputs": [
@@ -844,7 +658,7 @@
     "            reflected_clean = warp_reflection(clone, points[0], points[1])\n",
     "            cv2.imwrite(\"output/resultado_reflexion.png\", reflected_clean)\n",
     "\n",
-    "            reflected_with_line = actualizar_reflexion(points[1])\n",
+    "            reflected_with_line = update_reflection(points[1])\n",
     "            cv2.imwrite(\"output/resultado_reflexion_con_linea.png\", reflected_with_line)\n",
     "\n",
     "            print(\"Guardadas imágenes en output/\")\n",
@@ -852,20 +666,20 @@
     "\n",
     "    elif event == cv2.EVENT_MOUSEMOVE:\n",
     "        if len(points) == 1:\n",
-    "            display = actualizar_reflexion([x, y])\n",
+    "            display = update_reflection([x, y])\n",
     "            cv2.imshow(\"Reflexion\", display)\n",
     "\n",
-    "def actualizar_reflexion(temp_point=None):\n",
+    "def update_reflection(temp_point=None):\n",
     "    global clone, points\n",
     "\n",
     "    if len(points) == 0:\n",
     "        return clone.copy()\n",
-    "    elif len(points) == 1:\n",
+    "    elif len(points) == 1: # vista en tiempo real\n",
     "        p1 = np.array(points[0], dtype=np.float32)\n",
     "        if temp_point is None:\n",
     "            return clone.copy()\n",
     "        p2 = np.array(temp_point, dtype=np.float32)\n",
-    "    else:\n",
+    "    else: # vista definitiva\n",
     "        p1 = np.array(points[0], dtype=np.float32)\n",
     "        p2 = np.array(points[1], dtype=np.float32)\n",
     "\n",
