--- a/03/P03.ipynb
+++ b/03/P03.ipynb
@@ -71,84 +71,80 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "error",
-     "evalue": "OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 23\u001b[0m, in \u001b[0;36mupdate\u001b[1;34m(_)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mupdate\u001b[39m(_\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m     22\u001b[0m     c_val \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mgetTrackbarPos(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIntensidad\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTransformaciones\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m10.0\u001b[39m\n\u001b[1;32m---> 23\u001b[0m     modo \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetTrackbarPos\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mModo (0=Log,1=Exp)\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mTransformaciones\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m c_val \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     26\u001b[0m         c_val \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.1\u001b[39m  \u001b[38;5;66;03m# evitar log(0) o exp(0)\u001b[39;00m\n",
-      "\u001b[1;31merror\u001b[0m: OpenCV(4.10.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Usa las trackbars: Intensidad para variar c, Modo para elegir (0=Log, 1=Exp).\n",
-      "Pulsa ESC para salir.\n"
+      "Ajusta 'Intensidad Log' y 'Intensidad Exp'. Pulsa ESC para salir.\n"
      ]
     }
    ],
    "source": [
-    "import cv2\n",
+    "import cv2 as cv\n",
     "import numpy as np\n",
     "\n",
-    "# === Transformación Logarítmica ===\n",
+    "# --- Transformaciones ---\n",
     "def log_transform(img, c):\n",
-    "    img_float = img.astype(np.float32) / 255.0\n",
-    "    amplified = c * img_float  # el trackbar ajusta el grado de expansión\n",
-    "    result = np.log1p(amplified)\n",
-    "    result = cv2.normalize(result, None, 0, 255, cv2.NORM_MINMAX)\n",
-    "    return np.uint8(result)\n",
+    "    img_f = img.astype(np.float32) / 255.0\n",
+    "    out = np.log1p(c * img_f)\n",
+    "    out = cv.normalize(out, None, 0, 255, cv.NORM_MINMAX)\n",
+    "    return out.astype(np.uint8)\n",
     "\n",
-    "\n",
-    "# === Transformación Exponencial ===\n",
     "def exp_transform(img, c):\n",
-    "    img_float = img.astype(np.float32) / 255.0\n",
-    "    result = np.expm1(c * img_float)   # exp(c*x) - 1\n",
-    "    result = cv2.normalize(result, None, 0, 255, cv2.NORM_MINMAX)\n",
-    "    return np.uint8(result)\n",
+    "    img_f = img.astype(np.float32) / 255.0\n",
+    "    out = np.expm1(c * img_f)\n",
+    "    out = cv.normalize(out, None, 0, 255, cv.NORM_MINMAX)\n",
+    "    return out.astype(np.uint8)\n",
     "\n",
-    "# === Callback de trackbars ===\n",
+    "# --- Callback ---\n",
     "def update(_=None):\n",
-    "    c_val = cv2.getTrackbarPos('Intensidad', 'Transformaciones') / 10.0\n",
-    "    modo = cv2.getTrackbarPos('Modo (0=Log,1=Exp)', 'Transformaciones')\n",
-    "    \n",
-    "    if c_val == 0:\n",
-    "        c_val = 0.1  # evitar log(0) o exp(0)\n",
+    "    c_log = max(0.1, cv.getTrackbarPos('Intensidad Log', 'Transformaciones') / 10.0)\n",
+    "    c_exp = max(0.1, cv.getTrackbarPos('Intensidad Exp', 'Transformaciones') / 10.0)\n",
     "\n",
-    "    if modo == 0:\n",
-    "        transformada = log_transform(img, c_val)\n",
-    "        texto = f\"Transformacion Logaritmica (amplificación={c_val:.1f})\"\n",
-    "    else:\n",
-    "        transformada = exp_transform(img, c_val)\n",
-    "        texto = f\"Transformacion Exponencial (c={c_val:.1f})\"\n",
+    "    out_log = log_transform(img_log, c_log)\n",
+    "    out_exp = exp_transform(img_exp, c_exp)\n",
     "\n",
-    "    vista = np.hstack((img, transformada))\n",
-    "    cv2.putText(vista, texto, (10, 40), cv2.FONT_HERSHEY_SIMPLEX, 0.9, (0, 255, 0), 2, cv2.LINE_AA)\n",
-    "    cv2.imshow('Transformaciones', vista)\n",
+    "    fila1 = np.hstack((img_log, out_log))\n",
+    "    fila2 = np.hstack((img_exp, out_exp))\n",
+    "    vista = np.vstack((fila1, fila2))\n",
     "\n",
-    "# === Cargar imagen ===\n",
-    "img = cv2.imread('images/manzana.png', cv2.IMREAD_COLOR)\n",
-    "if img is None:\n",
-    "    raise FileNotFoundError(\"No se encontró la imagen 'manzana.png' en la carpeta images.\")\n",
+    "    cv.putText(vista, f'LOG c={c_log:.1f}', (10, 30), cv.FONT_HERSHEY_SIMPLEX, 0.8, (0,255,0), 2)\n",
+    "    cv.putText(vista, f'EXP c={c_exp:.1f}', (10, fila1.shape[0] + 30), cv.FONT_HERSHEY_SIMPLEX, 0.8, (0,255,0), 2)\n",
     "\n",
-    "# === Crear ventana y trackbars ===\n",
-    "cv2.namedWindow('Transformaciones')\n",
-    "cv2.createTrackbar('Intensidad', 'Transformaciones', 10, 100, update)  # c de 0.0 a 5.0\n",
-    "cv2.createTrackbar('Modo (0=Log,1=Exp)', 'Transformaciones', 0, 1, update)\n",
+    "    cv.imshow('Transformaciones', vista)\n",
     "\n",
+    "# --- Cargar imágenes ---\n",
+    "img_log = cv.imread('images/imagen7_1.jpg', cv.IMREAD_COLOR)\n",
+    "img_exp = cv.imread('images/imagen7_2.png', cv.IMREAD_COLOR)\n",
+    "if img_log is None or img_exp is None:\n",
+    "    raise FileNotFoundError(\"No se pudieron cargar las imágenes.\")\n",
+    "\n",
+    "# Redimensionar si hace falta\n",
+    "if img_log.shape[:2] != img_exp.shape[:2]:\n",
+    "    h = min(img_log.shape[0], img_exp.shape[0])\n",
+    "    w = min(img_log.shape[1], img_exp.shape[1])\n",
+    "    img_log = cv.resize(img_log, (w, h))\n",
+    "    img_exp = cv.resize(img_exp, (w, h))\n",
+    "\n",
+    "# --- Crear ventana ---\n",
+    "cv.namedWindow('Transformaciones')\n",
+    "\n",
+    "# Crear primero las trackbars\n",
+    "cv.createTrackbar('Intensidad Log', 'Transformaciones', 10, 100, lambda x: None)\n",
+    "cv.createTrackbar('Intensidad Exp', 'Transformaciones', 10, 100, lambda x: None)\n",
+    "\n",
+    "# Llamar a update() después de crear las trackbars\n",
     "update()\n",
     "\n",
-    "print(\"Usa las trackbars: Intensidad para variar c, Modo para elegir (0=Log, 1=Exp).\")\n",
-    "print(\"Pulsa ESC para salir.\")\n",
+    "print(\"Ajusta 'Intensidad Log' y 'Intensidad Exp'. Pulsa ESC para salir.\")\n",
     "\n",
     "while True:\n",
-    "    if cv2.waitKey(1) & 0xFF == 27:\n",
+    "    key = cv.waitKey(1) & 0xFF\n",
+    "    if key == 27:  # ESC\n",
     "        break\n",
+    "    # Refresca continuamente\n",
+    "    update()\n",
     "\n",
-    "cv2.destroyAllWindows()\n"
+    "cv.destroyAllWindows()\n"
    ]
   },
   {
