--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "52e30f96",
    "metadata": {},
    "outputs": [
@@ -46,8 +46,10 @@
     "cx, cy = w//2, h//2\n",
     "mouse_selected = False\n",
     "dragging_img = False\n",
-    "start_x, start_y = 0, 0\n",
-    "tx_mouse, ty_mouse = 0, 0\n",
+    "start_x = 0\n",
+    "start_y = 0\n",
+    "tx_mouse = 0\n",
+    "ty_mouse = 0\n",
     "\n",
     "def nothing(x):\n",
     "    pass\n",
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "61bcc904",
    "metadata": {},
    "outputs": [
@@ -583,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "74a688c7",
    "metadata": {},
    "outputs": [],
