--- a/03/P03.ipynb
+++ b/03/P03.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b82d6be3",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
     "\n",
     "for i in range(ancho + 1):\n",
     "    frame = negativo.copy()\n",
-    "    frame[:, :i] = imagen[:, :i]\n",
+    "    frame[:, :i] = imagen[:, :i] # Reemplaza la parte izquierda (negativa) con la imagen original\n",
     "    out.write(frame)\n",
     "\n",
     "out.release()\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "808e6574",
    "metadata": {},
    "outputs": [
@@ -82,10 +82,10 @@
     "import cv2 as cv\n",
     "import numpy as np\n",
     "\n",
-    "# --- Transformaciones ---\n",
+    "# Transformaciones\n",
     "def log_transform(img, c):\n",
     "    img_f = img.astype(np.float32) / 255.0\n",
-    "    out = np.log1p(c * img_f)\n",
+    "    out = np.log1p(c * img_f) # mejora zonas oscuras\n",
     "    out = cv.normalize(out, None, 0, 255, cv.NORM_MINMAX)\n",
     "    return out.astype(np.uint8)\n",
     "\n",
@@ -95,7 +95,7 @@
     "    out = cv.normalize(out, None, 0, 255, cv.NORM_MINMAX)\n",
     "    return out.astype(np.uint8)\n",
     "\n",
-    "# --- Callback ---\n",
+    "# Callback de las trackbars\n",
     "def update(_=None):\n",
     "    c_log = max(0.1, cv.getTrackbarPos('Intensidad Log', 'Transformaciones') / 10.0)\n",
     "    c_exp = max(0.1, cv.getTrackbarPos('Intensidad Exp', 'Transformaciones') / 10.0)\n",
@@ -112,60 +112,35 @@
     "\n",
     "    cv.imshow('Transformaciones', vista)\n",
     "\n",
-    "# --- Cargar imágenes ---\n",
+    "# Cargar imágenes\n",
     "img_log = cv.imread('images/imagen7_1.jpg', cv.IMREAD_COLOR)\n",
     "img_exp = cv.imread('images/imagen7_2.png', cv.IMREAD_COLOR)\n",
     "if img_log is None or img_exp is None:\n",
     "    raise FileNotFoundError(\"No se pudieron cargar las imágenes.\")\n",
     "\n",
-    "# Redimensionar si hace falta\n",
+    "# Redimensionar\n",
     "if img_log.shape[:2] != img_exp.shape[:2]:\n",
     "    h = min(img_log.shape[0], img_exp.shape[0])\n",
     "    w = min(img_log.shape[1], img_exp.shape[1])\n",
     "    img_log = cv.resize(img_log, (w, h))\n",
     "    img_exp = cv.resize(img_exp, (w, h))\n",
     "\n",
-    "# --- Crear ventana ---\n",
     "cv.namedWindow('Transformaciones')\n",
     "\n",
-    "# Crear primero las trackbars\n",
     "cv.createTrackbar('Intensidad Log', 'Transformaciones', 10, 100, lambda x: None)\n",
     "cv.createTrackbar('Intensidad Exp', 'Transformaciones', 10, 100, lambda x: None)\n",
     "\n",
-    "# Llamar a update() después de crear las trackbars\n",
     "update()\n",
     "\n",
     "print(\"Ajusta 'Intensidad Log' y 'Intensidad Exp'. Pulsa ESC para salir.\")\n",
     "\n",
     "while True:\n",
     "    key = cv.waitKey(1) & 0xFF\n",
-    "    if key == 27:  # ESC\n",
+    "    if key == 27:\n",
     "        break\n",
-    "    # Refresca continuamente\n",
     "    update()\n",
     "\n",
     "cv.destroyAllWindows()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51d4c0a4",
-   "metadata": {},
-   "source": [
-    "**CAMBIOS**\n",
-    "🔧 Qué cambia y por qué\n",
-    "Problema\tSolución aplicada\n",
-    "Texto con caracteres raros\tSe corrigió la codificación y se usa cv2.LINE_AA para mejor renderizado.\n",
-    "Imagen logarítmica sin cambios\tSe normalizó correctamente con cv2.normalize(...), antes no se redistribuían los niveles.\n",
-    "Imagen exponencial muy oscura\tTambién se normaliza, lo que ajusta el contraste y evita saturación negra.\n",
-    "Escala de c muy sensible\tSe mantiene de 0.1 a 5.0, que produce efectos graduales y perceptibles.\n",
-    "🧠 Comportamiento esperado\n",
-    "\n",
-    "Modo 0 (Logarítmica): aclara las zonas oscuras → compresión de rango dinámico.\n",
-    "\n",
-    "Modo 1 (Exponencial): oscurece las zonas claras → expansión del rango dinámico.\n",
-    "\n",
-    "El parámetro c controla la fuerza del efecto en ambos casos."
    ]
   },
   {
@@ -184,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "744ac9d6",
    "metadata": {},
    "outputs": [
@@ -221,7 +196,7 @@
     "    w1 = (1 + cos_term) / 2\n",
     "    w2 = (1 - cos_term) / 2\n",
     "\n",
-    "    I3 = w1 * I1 + w2 * I2\n",
+    "    I3 = w1 * I1 + w2 * I2 # Mezcla ponderada\n",
     "\n",
     "    frame = np.uint8(np.clip(I3, 0, 255))\n",
     "\n",
@@ -675,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
