--- a/03/P03.ipynb
+++ b/03/P03.ipynb
@@ -581,6 +581,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54902682",
+   "metadata": {},
+   "source": [
+    "Atendiendo a los resultados podemos sacar las siguientes conclusiones:\n",
+    "\n",
+    "En primer lugar, el **filtro promedio** genera una imagen con una ligera reducción del ruido; sin embargo, este no se elimina completamente y la imagen resultante no es nítida.\n",
+    "\n",
+    "En segundo lugar, el **filtro gaussiano** produce un resultado similar al anterior. Aunque consigue reducir parte del ruido, la imagen final continúa siendo poco nítida y conserva cierta granularidad.\n",
+    "\n",
+    "Por otro lado, el **filtro mediano** obtiene una imagen sin ruido visible y, aunque no es completamente nítida, permite apreciar con mayor claridad los detalles y contornos de los objetos.\n",
+    "\n",
+    "Por último, el **filtro bilateral** logra una imagen con menos ruido que la imagen de entrada pero es bastante visible aún.\n",
+    "\n",
+    "En conclusión, el filtro que ofrece el mejor resultado es el filtro mediano, ya que consigue eliminar casi por completo el ruido sin comprometer excesivamente los bordes ni los detalles principales de la imagen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "91f7854d",
    "metadata": {},
    "source": [
@@ -700,10 +718,9 @@
    "id": "70965690",
    "metadata": {},
    "source": [
-    "Resumen explicativo para tu entrega\n",
+    "A continuación, se describen los filtros investigados e inventados:\n",
     "\n",
-    "1. Técnica investigada:\n",
-    "El Non-Local Means Denoising (NLM) es un filtro avanzado que elimina ruido comparando parches similares dentro de toda la imagen, no solo con sus vecinos inmediatos. Su ventaja es que preserva bordes y texturas mejor que los filtros promedio o gaussianos.\n",
+    "El **Non-Local Means Denoising (NLM)** es un filtro avanzado que elimina ruido comparando parches similares dentro de toda la imagen, no solo con sus vecinos inmediatos. Su ventaja es que preserva bordes y texturas mejor que los filtros promedio o gaussianos.\n",
     "\n",
     "2. Filtro inventado – “EdgePulse”\n",
     "Basado en el gradiente de Sobel, este filtro realza los bordes multiplicando la intensidad local por un factor proporcional a la magnitud del gradiente. El resultado es una imagen con bordes reforzados sin binarización.\n",
