--- a/03/P03.ipynb
+++ b/03/P03.ipynb
@@ -14,7 +14,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "1. El negativo de una imagen es el resultado de aplicar la siguiente operación: 255-imagen(i,j). Aplica esta operación sobre la `imagen2.png` y, posteriormente, crea un video que vaya mezclando las dos imágenes por columnas, de forma que aparezca primero el negativo de la imagen y vaya apareciendo poco a poco la imagen original. El número de iteraciones debe ser igual al ancho de la imagen y en cada una se debe ir desplazando una columna a la derecha la imagen original sobre el negativo. Guarda el vídeo con el nombre `vídeo2.mp4`. (1.0 puntos)"
+    "## Ejercicio 1\n",
+    "El negativo de una imagen es el resultado de aplicar la siguiente operación: 255-imagen(i,j). Aplica esta operación sobre la `imagen2.png` y, posteriormente, crea un video que vaya mezclando las dos imágenes por columnas, de forma que aparezca primero el negativo de la imagen y vaya apareciendo poco a poco la imagen original. El número de iteraciones debe ser igual al ancho de la imagen y en cada una se debe ir desplazando una columna a la derecha la imagen original sobre el negativo. Guarda el vídeo con el nombre `vídeo2.mp4`. (1.0 puntos)"
    ]
   },
   {
@@ -64,7 +65,8 @@
    "id": "8814a85d",
    "metadata": {},
    "source": [
-    "2. Desarrolla una pequeña aplicación que mediante trackbars permita hacer transformaciones en el rango dinámico (logarítmica y exponencial) seleccionando la intensidad de la compresión/expansión. Selecciona dos imágenes donde el efecto de ambas transformaciones se perciba claramente. (1.0 punto)"
+    "## Ejercicio 2.\n",
+    "Desarrolla una pequeña aplicación que mediante trackbars permita hacer transformaciones en el rango dinámico (logarítmica y exponencial) seleccionando la intensidad de la compresión/expansión. Selecciona dos imágenes donde el efecto de ambas transformaciones se perciba claramente. (1.0 punto)"
    ]
   },
   {
@@ -154,7 +156,8 @@
    "id": "34d19650",
    "metadata": {},
    "source": [
-    "3. Mezcla las imágenes `imagen7_1.jpg` e `imagen7_2.png` de forma no lineal utilizando la siguiente expresión:\n",
+    "## Ejercicio 3\n",
+    "Mezcla las imágenes `imagen7_1.jpg` e `imagen7_2.png` de forma no lineal utilizando la siguiente expresión:\n",
     "\n",
     "$$\n",
     "I_3 = \\frac{1 + \\cos\\left(\\frac{\\alpha}{180}\\pi\\right)}{2} I_1 + \\frac{1 - \\cos\\left(\\frac{\\alpha}{180}\\pi\\right)}{2} I_2\n",
@@ -221,7 +224,8 @@
    "id": "6e9e80a4",
    "metadata": {},
    "source": [
-    "4. Obtén el ecualizado del histograma de la imagen `imagen3.png`. (0.5 puntos)."
+    "## Ejercicio 4\n",
+    "Obtén el ecualizado del histograma de la imagen `imagen3.png`. (0.5 puntos)."
    ]
   },
   {
@@ -306,7 +310,8 @@
    "id": "fcf112b5",
    "metadata": {},
    "source": [
-    "5. Elimina el ruido de la imagen resultado del paso 4 utilizando un filtro bilateral con un diámetro d=10 y valores de sigma de 11 y 11. Guarda el resultado como `imagen3_salida.png`. (0.5 puntos)"
+    "## Ejercicio 5\n",
+    "Elimina el ruido de la imagen resultado del paso 4 utilizando un filtro bilateral con un diámetro d=10 y valores de sigma de 11 y 11. Guarda el resultado como `imagen3_salida.png`. (0.5 puntos)"
    ]
   },
   {
@@ -394,7 +399,8 @@
    "id": "a62d87eb",
    "metadata": {},
    "source": [
-    "6. Calcula la norma del gradiente de la `imagen5.jpg` utilizando los operadores de Sobel. Umbraliza los valores de la norma de forma que los valores mayores o iguales a 128 se igualen a 255 y los menores de 128 se igualen a 0. Finalmente, aplica un filtro Gaussiano de radio (7,7) con sigma=-1. Guarda el resultado con el nombre `imagen5_salida.png`. (1.5 puntos)"
+    "## Ejercicio 6\n",
+    "Calcula la norma del gradiente de la `imagen5.jpg` utilizando los operadores de Sobel. Umbraliza los valores de la norma de forma que los valores mayores o iguales a 128 se igualen a 255 y los menores de 128 se igualen a 0. Finalmente, aplica un filtro Gaussiano de radio (7,7) con sigma=-1. Guarda el resultado con el nombre `imagen5_salida.png`. (1.5 puntos)"
    ]
   },
   {
@@ -452,7 +458,8 @@
    "id": "5a192b4a",
    "metadata": {},
    "source": [
-    "7. Con la `imagen4.jpg`, crea un vídeo de 100 frames aplicando un filtro mediano de radio (ksize) igual a 7. Aplica el filtro en cada iteración al resultado de la iteración anterior. Guarda el vídeo con el nombre `video4.mp4`. (0.5 puntos)"
+    "## Ejercicio 7\n",
+    "Con la `imagen4.jpg`, crea un vídeo de 100 frames aplicando un filtro mediano de radio (ksize) igual a 7. Aplica el filtro en cada iteración al resultado de la iteración anterior. Guarda el vídeo con el nombre `video4.mp4`. (0.5 puntos)"
    ]
   },
   {
@@ -503,7 +510,8 @@
    "id": "951ea901",
    "metadata": {},
    "source": [
-    "8. Elimina el ruido de la `imagen6.png` aplicando todos los algoritmos vistos en clase para este fin. Si es necesario aplica los filtros múltiples veces para eliminar el ruido lo mejor posible. Haz un breve estudio comparativo entre las técnicas y selecciona el mejor resultado. (1 punto) NO MEZCLAR FILTROS"
+    "## Ejercicio 8\n",
+    "Elimina el ruido de la `imagen6.png` aplicando todos los algoritmos vistos en clase para este fin. Si es necesario aplica los filtros múltiples veces para eliminar el ruido lo mejor posible. Haz un breve estudio comparativo entre las técnicas y selecciona el mejor resultado. (1 punto) NO MEZCLAR FILTROS"
    ]
   },
   {
@@ -602,7 +610,8 @@
    "id": "91f7854d",
    "metadata": {},
    "source": [
-    "9. Investiga sobre alguna técnica de filtrado distinta a las vistas en clase. Explícala y codifica un ejemplo de uso. A continuación, propón dos filtros de tu invención (lineales o no lineales) especializados en detectar bordes o eliminar ruido. (1 punto)"
+    "## Ejercicio 9\n",
+    "Investiga sobre alguna técnica de filtrado distinta a las vistas en clase. Explícala y codifica un ejemplo de uso. A continuación, propón dos filtros de tu invención (lineales o no lineales) especializados en detectar bordes o eliminar ruido. (1 punto)"
    ]
   },
   {
@@ -639,9 +648,6 @@
     "\n",
     "# FILTRO NUEVO INVESTIGADO: NON-LOCAL MEANS (NLM)\n",
     "def filtro_nlm(img):\n",
-    "    \"\"\"\n",
-    "    Aplica el filtro Non-Local Means Denoising (elimina ruido preservando bordes).\n",
-    "    \"\"\"\n",
     "    return cv2.fastNlMeansDenoisingColored(\n",
     "        img, None,\n",
     "        h=30,            # intensidad luminancia\n",
@@ -652,9 +658,6 @@
     "\n",
     "# FILTRO INVENTADO 1: \"EDGEPULSE\"\n",
     "def filtro_edgepulse(img):\n",
-    "    \"\"\"\n",
-    "    Aumenta la intensidad de los bordes amplificando los gradientes locales.\n",
-    "    \"\"\"\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    gx = cv2.Sobel(gray, cv2.CV_32F, 1, 0, ksize=3)\n",
     "    gy = cv2.Sobel(gray, cv2.CV_32F, 0, 1, ksize=3)\n",
@@ -666,10 +669,6 @@
     "\n",
     "# FILTRO INVENTADO 2: \"SMART MEDIAN\"\n",
     "def filtro_smart_median(img):\n",
-    "    \"\"\"\n",
-    "    Sustituye solo los píxeles ruidosos (que difieren mucho del entorno)\n",
-    "    por el resultado del filtro mediano, manteniendo los detalles nítidos.\n",
-    "    \"\"\"\n",
     "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    median = cv2.medianBlur(gray, 5)\n",
     "    diff = cv2.absdiff(gray, median)\n",
@@ -720,7 +719,7 @@
    "source": [
     "A continuación, se describen los filtros investigados e inventados:\n",
     "\n",
-    "El **Non-Local Means Denoising (NLM)** es un filtro avanzado que elimina ruido comparando parches similares dentro de toda la imagen, no solo con sus vecinos inmediatos. Su ventaja es que preserva bordes y texturas mejor que los filtros promedio o gaussianos.\n",
+    "El **Non-Local Means Denoising (NLM)** es un filtro avanzado que elimina ruido comparando parches similares dentro de toda la imagen, no solo con sus vecinos inmediatos.\n",
     "\n",
     "2. Filtro inventado – “EdgePulse”\n",
     "Basado en el gradiente de Sobel, este filtro realza los bordes multiplicando la intensidad local por un factor proporcional a la magnitud del gradiente. El resultado es una imagen con bordes reforzados sin binarización.\n",
