--- a/02/P02a.ipynb
+++ b/02/P02a.ipynb
@@ -114,6 +114,165 @@
     "\n",
     "cv.destroyAllWindows()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5c44bdc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usa los sliders para transformar la imagen.\n",
+      "Haz CLIC para cambiar el centro de rotación.\n",
+      "Pulsa ESC para salir.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "\n",
+    "# Cargar imagen\n",
+    "image = cv.imread('images/cats.png')\n",
+    "if image is None:\n",
+    "    raise FileNotFoundError(\"No se encontró la imagen.\")\n",
+    "h, w = image.shape[:2]\n",
+    "\n",
+    "# Variables globales para el centro de rotación\n",
+    "cx = float(w // 2)\n",
+    "cy = float(h // 2)\n",
+    "M_display = np.array([[1.0, 0.0, 0.0],\n",
+    "                      [0.0, 1.0, 0.0]], dtype=np.float32)\n",
+    "\n",
+    "# Crear ventana\n",
+    "cv.namedWindow(\"Transformaciones\")\n",
+    "\n",
+    "def nothing(x):\n",
+    "    pass\n",
+    "\n",
+    "# Crear trackbars\n",
+    "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)\n",
+    "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)\n",
+    "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
+    "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)  \n",
+    "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
+    "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
+    "\n",
+    "# Callback del ratón para cambiar centro de rotación\n",
+    "def mouse_callback(event, x, y, flags, param):\n",
+    "    global cx, cy, M_display\n",
+    "    \n",
+    "    if event == cv.EVENT_LBUTTONDOWN:\n",
+    "        # Convertir punto clicado a coordenadas originales\n",
+    "        M_inv = cv.invertAffineTransform(M_display)\n",
+    "        src_x = M_inv[0, 0] * x + M_inv[0, 1] * y + M_inv[0, 2]\n",
+    "        src_y = M_inv[1, 0] * x + M_inv[1, 1] * y + M_inv[1, 2]\n",
+    "        \n",
+    "        # Actualizar centro\n",
+    "        cx, cy = float(src_x), float(src_y)\n",
+    "        \n",
+    "        # Ajustar traslación para mantener imagen fija\n",
+    "        tx_new = int(round(x - cx))\n",
+    "        ty_new = int(round(y - cy))\n",
+    "        \n",
+    "        cv.setTrackbarPos(\"Tx\", \"Transformaciones\", \n",
+    "                         np.clip(tx_new + w//2, 0, w))\n",
+    "        cv.setTrackbarPos(\"Ty\", \"Transformaciones\", \n",
+    "                         np.clip(ty_new + h//2, 0, h))\n",
+    "\n",
+    "cv.setMouseCallback(\"Transformaciones\", mouse_callback)\n",
+    "\n",
+    "print(\"Usa los sliders para transformar la imagen.\")\n",
+    "print(\"Haz CLIC para cambiar el centro de rotación.\")\n",
+    "print(\"Pulsa ESC para salir.\")\n",
+    "\n",
+    "while True:\n",
+    "    # Leer valores de trackbars\n",
+    "    tx = cv.getTrackbarPos(\"Tx\", \"Transformaciones\") - w//2\n",
+    "    ty = cv.getTrackbarPos(\"Ty\", \"Transformaciones\") - h//2\n",
+    "    angle = cv.getTrackbarPos(\"Angulo\", \"Transformaciones\")\n",
+    "    sx = cv.getTrackbarPos(\"EscalaX\", \"Transformaciones\") / 100.0\n",
+    "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
+    "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
+    "\n",
+    "    if uniforme:\n",
+    "        sy = sx\n",
+    "\n",
+    "    # Construir matriz compuesta\n",
+    "    rad = np.deg2rad(angle)\n",
+    "    c, s = np.cos(rad), np.sin(rad)\n",
+    "\n",
+    "    # 1. Trasladar centro al origen\n",
+    "    M_translate1 = np.float32([[1, 0, -cx],\n",
+    "                               [0, 1, -cy]])\n",
+    "    \n",
+    "    # 2. Escalar\n",
+    "    if uniforme:\n",
+    "        S = np.float32([[sx, 0, 0],\n",
+    "                        [0, sx, 0]])\n",
+    "    else:\n",
+    "        S = np.float32([[sx, 0, 0],\n",
+    "                        [0, sy, 0]])\n",
+    "    \n",
+    "    # 3. Rotar\n",
+    "    M_rotate = np.float32([[c, -s, 0],\n",
+    "                          [s,  c, 0]])\n",
+    "    \n",
+    "    # 4. Trasladar centro de vuelta\n",
+    "    M_translate2 = np.float32([[1, 0, cx],\n",
+    "                               [0, 1, cy]])\n",
+    "    \n",
+    "    # 5. Trasladar según trackbar\n",
+    "    T = np.float32([[1, 0, tx],\n",
+    "                    [0, 1, ty]])\n",
+    "\n",
+    "    # Combinar todas las transformaciones\n",
+    "    M1 = np.vstack([M_translate1, [0, 0, 1]])\n",
+    "    M2 = np.vstack([S, [0, 0, 1]])\n",
+    "    M3 = np.vstack([M_rotate, [0, 0, 1]])\n",
+    "    M4 = np.vstack([M_translate2, [0, 0, 1]])\n",
+    "    M5 = np.vstack([T, [0, 0, 1]])\n",
+    "    \n",
+    "    M_total = M5 @ M4 @ M3 @ M2 @ M1\n",
+    "    M_final = M_total[:2]\n",
+    "    \n",
+    "    # Guardar matriz para el callback\n",
+    "    M_display = M_final.copy()\n",
+    "\n",
+    "    # Aplicar transformación\n",
+    "    img_final = cv.warpAffine(image, M_final, (w, h))\n",
+    "\n",
+    "    # Crear copia para visualización\n",
+    "    img_display = img_final.copy()\n",
+    "    \n",
+    "    # Calcular posición del centro en la imagen transformada\n",
+    "    px = int(round(M_final[0, 0]*cx + M_final[0, 1]*cy + M_final[0, 2]))\n",
+    "    py = int(round(M_final[1, 0]*cx + M_final[1, 1]*cy + M_final[1, 2]))\n",
+    "    \n",
+    "    # Dibujar centro de rotación (rojo)\n",
+    "    cv.circle(img_display, (px, py), 5, (0, 0, 255), -1)\n",
+    "    cv.putText(img_display, f\"({int(cx)},{int(cy)})\", (px + 10, py - 10),\n",
+    "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
+    "    \n",
+    "    # Dibujar punto de traslación (verde)\n",
+    "    tx_point = w//2 + tx\n",
+    "    ty_point = h//2 + ty\n",
+    "    if 0 <= tx_point < w and 0 <= ty_point < h:\n",
+    "        cv.circle(img_display, (tx_point, ty_point), 5, (0, 255, 0), -1)\n",
+    "        cv.putText(img_display, f\"T({tx_point},{ty_point})\", \n",
+    "                   (tx_point + 10, ty_point - 10),\n",
+    "                   cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
+    "\n",
+    "    cv.imshow(\"Transformaciones\", img_display)\n",
+    "\n",
+    "    if cv.waitKey(1) & 0xFF == 27:\n",
+    "        break\n",
+    "\n",
+    "cv.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
